# pyke

./: '  .gitignore  MANIFEST.in  README.md  __main__.py  action_map.py  compile_flags.txt  design.txt  main.py  new-cmd-line.txt  newPyke.json  pyproject.toml  readme_helper.py  setup.py  test.sh  todo.txt
demos/custom_phase/: custom.py  make.py  pyke-config.json  pyke-subconfig.json  src_path
demos/ext_deps/: make.py
demos/multi_shared_objects/: make.py
demos/multiproject/: make.py
demos/multisrc/: simple_0.py  simple_1.py
demos/shared_multi/: make.py
demos/simple/: pyke.json  run.sh
demos/simple_app/: make.py  pyke-config.json
demos/simple_lib/: make.py
demos/simple_so/: make.py
pyke/: DependencyGraph.py  FileFinder.py  ObjectData.py  __main__.py  built_in.py  command.py  error.py  main.py  terminal.py  timer.py
pyke/builtIn/: c++.pyke.json  default.pyke.json
pyke/projects/: c++_pykeProject.py  cpp_project.py  cpp_project_template.json  default_pykeProject.py  project.py  project_template.json  projects.py
pyke/tools/: CPlusPlusTool.py  Tool.py  cpp_tool.py  pykeTools_CPlusPlusLinuxGnu.py  tool.py
src/pyke/: __init__.py  _version.py  action.py  action_map.py  ansi.py  config.py  options.py  options_owner.py  options_parser.py  pyke-config.json  pyke.py  reporter.py  (+2 more)
test/: a.pyke.json  a1.pyke.json  a11.pyke.json  a12.pyke.json  a2.pyke.json  a21.pyke.json  a22.pyke.json  base.test.json  merge1.test.json  test_command.py  test_json.json  test_json.py  test_projects.py
tests/: options_test.py  test_options.py  test_options_parser.py
(+64 files in other folders)
